--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "node data.js"
   },
   "dependencies": {
     "apollo-server": "^2.9.7",
